# qml_and_js

./: CMakeLists.txt  CMakeLists.txt.user.df1fa4f  ModelSprite.qml  Sprite.qml  const.js  hoisting.js  main.qml  myScript.js  qml.qrc  variables.js
